--- a/docker-compose.yml.sample
+++ b/docker-compose.yml.sample
@@ -2,11 +2,15 @@ version: '3.7'
 
 services:
   nexus:
-    image: teecke/nexus:0.1.1
+    image: teecke/nexus:0.2.0
     ports:
       - 8081:8081
     volumes:
-      - ./sonatype-work:/sonatype-work
+      - ./data/nexus-data:/nexus-data
+    ulimits:
+      nofile:
+        soft: 65536
+        hard: 65536
       
 networks:
     default:
