--- a/docker-compose.yml.sample
+++ b/docker-compose.yml.sample
@@ -2,7 +2,7 @@ version: '3.7'
 
 services:
   nexus:
-    image: teecke/nexus:0.2.0
+    image: teecke/gp-nexus:0.3.0
     build: nexus
     ports:
       - 8081:8081
